--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "webpack-dev-server --config=./config/webpack.dev.js",
+    "start": "webpack-dev-server --config=./build/webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "tslint",
-    "build:dev": "webpack --config=./config/webpack.dev.js"
+    "lint": "tslint -p .",
+    "build:dev": "webpack --config=./build/webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -21,13 +21,18 @@
   },
   "homepage": "https://github.com/taoabc/phaser-demo#readme",
   "dependencies": {
-    "phaser": "^3.15.1",
     "phaser-ce": "^2.11.1",
     "tslint": "^5.12.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-stage-2": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^4.6.0",
+    "expose-loader": "^0.7.5",
     "html-webpack-plugin": "^3.2.0",
+    "ts-loader": "^5.3.3",
     "typescript": "^3.2.2",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
