--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --config=./build/webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tslint -p .",
+    "build:factory": "tsc -p src/factory.json",
     "build:dev": "webpack --config=./build/webpack.dev.js"
   },
   "repository": {
